# amaranth-fp

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  FLOPOCO_ANALYSIS.md  README.md  SOLLYA_ANALYSIS.md  SOLLYA_TRIG_FUNCTIONS.md
examples/: sinusoide.py
src/amaranth_fp/: __init__.py  format.py  operator.py  pipeline.py  pipelined.py  targets.py
src/amaranth_fp/bitheap/: __init__.py  bit.py  bit_heap.py  bit_heap_solution.py  compression_strategy.py  compressor.py  diff_compressed_table.py  dual_table.py  first_fitting_strategy.py  max_efficiency_strategy.py  parandeh_afshar_strategy.py  weighted_bit.py
src/amaranth_fp/building_blocks/: __init__.py  branch_mux.py  lzc.py  lzoc3.py  normalizer.py  one_hot_decoder.py  rounding.py  shifter.py  thermometer_decoder.py
src/amaranth_fp/complex/: __init__.py  fix_complex_adder.py  fix_complex_kcm.py  fix_complex_mult.py  fix_fft.py  int_fft.py  (+8 more)
tests/: conftest.py  test_advanced_operators.py  test_batch1_operators.py  test_batch2_operators.py  test_batch3_operators.py  test_branch_mux.py  test_building_blocks.py  test_conversions.py  test_edge_cases.py  test_format.py  test_hardware_verification.py  test_helpers.py  test_missing_primitives.py  test_new_operators.py  test_operators.py  test_pipelined.py  test_sollya_functions.py  test_sollya_reference.py  test_targets.py  test_value_complex_filters_functions.py  test_value_fixedpoint_operators.py  test_value_fp_operators.py  test_value_integer_operators.py  test_value_posit_sorting_blocks.py  test_value_primitives.py  test_value_trig_lns_operators.py
(+189 files in other folders)
